<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuMaps"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menuMaps"
            android:onClick="lanzarMapas"/>
        <item
            android:id="@+id/menuNews"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuNoticias"
            android:onClick="lanzarNews"/>
        <item
            android:id="@+id/menuTution"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menuTution"
            android:onClick="lanzarTution"/>
        <item
            android:id="@+id/menuContacts"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuContacts"
            android:onClick="lanzarContacts"/>
        <item
            android:id="@+id/menuSchedule"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuSchedule"
            android:onClick="lanzarSchedule"/>
        <item
            android:id="@+id/menuVolunteers"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuVolunteers"
            android:onClick="lanzarVolunteers"/>
        <item
            android:id="@+id/menuMoodle"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuMoodle"
            android:onClick="lanzarMoodle"/>
        <item
            android:id="@+id/menuSettings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menuSettings" />
        <item
            android:id="@+id/menuLogin"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuLogin"
            android:onClick="LanzarLogin"/>
    </group>
</menu>
